Fix clipped slider due to containment.

--- a/src/stylesheets/abstracts/_variables.scss
+++ b/src/stylesheets/abstracts/_variables.scss
@@ -215,6 +215,7 @@ $resizable-threshold: $space-xs;
 // --------------------------------------------------
 
 $slider-width: 154px;
+$slider-height: $line-height-large;
 $slider-track-height: 4px;
 $slider-handle-size: $space-sm;
 
